fix: add ssl