@@ -1,4 +1,44 @@
 FROM eclipse-temurin:21 as app-build
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENV RELEASE=21
+
+WORKDIR /opt/build
+COPY ./build/libs/*.jar ./application.jar
+
+RUN java -Djarmode=layertools -jar application.jar extract
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules `jdeps --ignore-missing-deps -q -recursive --multi-release ${RELEASE} --print-module-deps -cp 'dependencies/BOOT-INF/lib/*' application.jar` \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output jdk
+
+FROM ubuntu:latest
+
+ARG BUILD_PATH=/opt/build
+ENV JAVA_HOME=/opt/jdk
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    ca-certificates \
+    openssl && \
+    update-ca-certificates --fresh
+
+RUN mkdir -p ${JAVA_HOME}/lib/security && \
+    ln -s /etc/ssl/certs/java/cacerts ${JAVA_HOME}/lib/security/cacerts
+
+
+
+RUN groupadd --gid 1000 spring-app \
+  && useradd --uid 1000 --gid spring-app --shell /bin/bash --create-home spring-app
+
+USER spring-app:spring-app
+WORKDIR /opt/workspace
+
+COPY --from=app-build $BUILD_PATH/jdk $JAVA_HOME
+COPY --from=app-build $BUILD_PATH/spring-boot-loader/ ./
+COPY --from=app-build $BUILD_PATH/dependencies/ ./
+COPY --from=app-build $BUILD_PATH/application/ ./
+
+ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
